--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -68,6 +68,8 @@ jobs:
     steps:
       - name: Setup Node.js
         uses: actions/setup-node@v3
+        with:
+          node-version: '18'
       - name: Download artifact
         uses: actions/download-artifact@v3
         with:
