--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -7,7 +7,7 @@
     "rootDir": "./src",
     "outDir": "./"
   },
-  "files": ["src/index.ts"],
+  "files": ["src/index.ts", "src/server.ts"],
   "include": ["src/**/*"],
   "exclude": ["**/*.spec.ts"]
 }
